# lol-auto-accept

./: .gitignore  LICENSE  README.md  SECURITY_AUDIT.md  build.ps1  pyproject.toml
.github/workflows/: ci.yml
docs/: testing.md
docs/superpowers/plans/: 2026-07-08-league-auto-accept.md  2026-07-09-safety-lock.md  2026-07-15-auto-item-sets.md  2026-07-16-companion-features.md
docs/superpowers/specs/: 2026-07-08-league-auto-accept-design.md  2026-07-09-safety-lock-design.md  2026-07-15-auto-download-updates-design.md  2026-07-15-auto-item-sets-design.md  2026-07-16-companion-features-design.md
scripts/: make_icon.py  probe_opgg.py  probe_ugg.py
src/laa/: __main__.py  config.py  updates.py
src/laa.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/laa/core/: champ_select.py  end_of_game.py  engine.py  ready_check.py  scout.py  selection.py
src/laa/lcu/: catalog.py  connector.py  discovery.py  events.py
src/laa/runes/: applier.py  provider.py
src/laa/ui/: assets.py  autostart.py  bridge.py  main_window.py  store.py  tray.py  worker.py
tests/: helpers.py  test_applier.py  test_autostart.py  test_catalog.py  test_champ_select.py  test_config.py  test_connector.py  test_discovery.py  test_end_of_game.py  test_engine.py  test_parse_message.py  test_provider.py  test_ready_check.py  test_scout.py  test_selection.py  test_store.py  test_ui_smoke.py  test_updates.py
