[project]
name = "laa"
version = "1.1.0"
description = "League Auto Accept - LCU automation with GUI"
requires-python = ">=3.12"
dependencies = [
  "PySide6>=6.7",
  "httpx>=0.27",
  "websockets>=14",
  "psutil>=5.9",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.24",
  "pytest-qt>=4.4",
  "aiohttp>=3.10",
  "pyinstaller>=6.10",
  "pillow>=10",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
